Fix Slider wrap mobile border bug
Masonry was laying boxes over it!

--- a/style.css
+++ b/style.css
@@ -2572,6 +2572,9 @@ body {
 
 .ucfbands-slider-wrap {
   box-shadow: inset 2px 0 #000000, inset 7px 0 5px -7px rgba(0, 0, 0, 0.5), 0 1px 0 #000000, 0 6px 0 #FFCA06, 0 7px 0 #a59a9d, 0 8px 6px rgba(0, 0, 0, 0.175); }
+  @media (max-width: 980px) {
+    .ucfbands-slider-wrap {
+      margin-bottom: 10px; } }
 
 .site-inner,
 .wrap {
